PK.BakarkakoProiektua.LehenengoMugarria

--- a/3 Maila/PK/1 mugarria/config/macros.tex
+++ b/3 Maila/PK/1 mugarria/config/macros.tex
@@ -77,9 +77,9 @@
 
 %\showtrimsoff
 
-\ifdefined\euskaraz
+\ifdefined\euskaraz%
 \newcommand{\upvehu}{Euskal Herriko Unibertsitatea UPV/EHU}
-\newcommand{\gapizenburua}{Lehenengo praktika}
+\newcommand{\gapizenburua}{Lehenengo mugarria}
 \newcommand{\malizenburua}{Master Tesia}
 \newcommand{\thesisizenburua}{Doktorego Tesia}
 \newcommand{\informatikafakultatea}{Informatika Fakultatea}
